Implemented getCourses in CourseService. Changed baseApiUrl unit test to check /courses instead of /announcements .